# surviving-mars

./: README.md
patent_copyright_research_order/: main.py
sensortower_heatmap/: main.py  util.py
sensortower_heatmap_static/: main.py  util.py
sensortowers/: .gitignore  Makefile  pyproject.toml
sensortowers/sensortowers_heatmap/: __main__.py  drawing.py  gamedata.py  main.py  solver.py  util.py
